gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test15525.d
version https://git-lfs.github.com/spec/v1
oid sha256:4c065eebec1d18167816152a58f594a51881f429f46baf8e37b459bfbe8239f5
size 553
